# coding_exercises

./: CMakeLists.txt  notes_stack
LeetCode/: CMakeLists.txt  cmake_debug.sh
LeetCode/1_Two_Sum/: CMakeLists.txt  impl.hpp
LeetCode/1_Two_Sum/test/: testAll.cxx
LeetCode/2_Add_Two_Numbers/: CMakeLists.txt  impl.hpp
LeetCode/2_Add_Two_Numbers/test/: testAll.cxx
LeetCode/3_Longest_Substring_Without_Repeating_Characters/: CMakeLists.txt
LeetCode/3_Longest_Substring_Without_Repeating_Characters/test/: testAll.cxx
LeetCode/4_Median_of_Two_Sorted_Arrays/: CMakeLists.txt  impl.hpp
LeetCode/4_Median_of_Two_Sorted_Arrays/test/: testAll.cxx
LeetCode/6_ZigZag_Conversion/: impl.hpp
LeetCode/6_ZigZag_Conversion/test/: testAll.cxx
LeetCode/7_Reverse_Integer/: impl.hpp
LeetCode/7_Reverse_Integer/test/: testAll.cxx
LeetCode/9_Palindrome_Number/: impl.hpp
LeetCode/9_Palindrome_Number/test/: testAll.cxx
LeetCode/problems/11_Container_With_Most_Water/: CMakeLists.txt  impl.hpp
LeetCode/problems/11_Container_With_Most_Water/test/: testAll.cxx
LeetCode/problems/1_Two_Sum/test/: testAll.cxx
LeetCode/problems/3_Longest_Substring_Without_Repeating_Characters/: CMakeLists.txt  impl.hpp
LeetCode/problems/4_Median_of_Two_Sorted_Arrays/: CMakeLists.txt  impl.hpp
LeetCode/problems/5_Longest_Palindromic_Substring/: CMakeLists.txt  impl.hpp
LeetCode/problems/5_Longest_Palindromic_Substring/test/: testAll.cxx
LeetCode/problems/6_ZigZag_Conversion/: CMakeLists.txt
LeetCode/problems/6_ZigZag_Conversion/test/: testAll.cxx
LeetCode/problems/7_Reverse_Integer/: CMakeLists.txt  impl.hpp
LeetCode/problems/8_String_to_Integer/: CMakeLists.txt  impl.hpp
LeetCode/problems/8_String_to_Integer/test/: testAll.cxx
LeetCode/problems/9_Palindrome_Number/: CMakeLists.txt
LeetCode/src/: 1_Two_Sum.cpp  2_Add_Two_Numbers.cpp  2_Two_Sum.cpp  3_Longest_Substring_Without_Repeating_Characters.cpp  4_Median_of_Two_Sorted_Arrays.cpp  a.out
Samples/: CMakeLists.txt
Samples/samples/: Bitset.hxx  CMakeLists.txt  Calculator.hxx  FindStrInMatrix.hxx  MaxAvgRunningSpeed.hxx
Samples/samples/test/: testAll.cxx
for_Citadel/impl_string/: impl_string.cpp
for_IMC/: CMakeLists.txt  README.txt  cmake_debug.sh  cmake_release.sh
for_IMC/paper_scissors_rock/: CMakeLists.txt
for_IMC/paper_scissors_rock/app/: main.cc  screen_game.cc
for_IMC/paper_scissors_rock/apps/: CMakeLists.txt  screen_game.cc
for_IMC/paper_scissors_rock/include/: choice.h  game.h  paper_player.h  player.h  random_player.h  rock_player.h  rule.h  scissors_player.h  screen_player.h  smart_player.h
for_IMC/paper_scissors_rock/include/psr/: game.h  paper_player.h  player.h  random_player.h  rock_player.h  rule.h  scissors_player.h  screen_player.h  smart_player.h
for_IMC/paper_scissors_rock/src/: CMakeLists.txt  game.cc  rule.cc
for_IMC/paper_scissors_rock/src/psr/: game.cc  rule.cc
for_IMC/paper_scissors_rock/test/: test.cc
for_IMC/paper_scissors_rock/tests/: CMakeLists.txt  test.cc
for_IMC/shapes/: CMakeLists.txt  area_visitor.h  circle.h  rectangle.h  shape_store.h  triangle.h
for_IMC/shapes/include/: rectangle.h  shape.h  triangle.h  visitor.h
for_IMC/shapes/test/: test.cc
for_IMC/shapes/tests/: CMakeLists.txt  test.cc
for_Jump/shortest_integer_ratio_representation/: CMakeLists.txt
for_Jump/shortest_integer_ratio_representation/include/: solution.h
for_Jump/shortest_integer_ratio_representation/tests/: CMakeLists.txt  test.cc
for_Jump/sparse_decomposition/: CMakeLists.txt
for_Jump/sparse_decomposition/include/: solution.h
for_Jump/sparse_decomposition/tests/: CMakeLists.txt  test.cc
for_Optiver/find_folding_point/: CMakeLists.txt
for_Optiver/find_folding_point/include/: solution.h
for_Optiver/find_folding_point/tests/: CMakeLists.txt  test.cc
for_Optiver/find_tree_error/: CMakeLists.txt
for_Optiver/find_tree_error/apps/: CMakeLists.txt  find_tree_error.cc
for_SIG/: CMakeLists.txt
for_SIG/divide_integer_sequence/: CMakeLists.txt
for_SIG/divide_integer_sequence/include/: solution.h
for_SIG/divide_integer_sequence/tests/: CMakeLists.txt  test.cc
for_SIG/solution/: CMakeLists.txt  solution.h
for_SIG/solution/test/: test.cc
for_Vivcourt/: CMakeLists.txt  README.txt
for_Vivcourt/order_book/: CMakeLists.txt
for_Vivcourt/order_book/apps/: CMakeLists.txt  order_book.cpp  order_book_app.cpp
for_Vivcourt/order_book/include/: common.hpp  message_types.hpp  messages.hpp  order_book.hpp  order_book_manager.hpp  types.hpp
for_Vivcourt/order_book/tests/: CMakeLists.txt  test.cpp
for_epoch/Bitset/: Makefile  main.cpp
for_epoch/Bitset/hpp/: Bitset.hpp
for_epoch/Graph/: Makefile  main.cpp
for_epoch/Graph/hpp/: Graph.hpp
for_epoch/Graph/src/: Graph.cpp
from_others/: monitorDiskUsage.py
net_test/echo/client/: Makefile  main.cpp
net_test/echo/server/: Makefile  main.cpp
net_test/echo/server/hpp/: Server.hpp
net_test/echo/server/src/: Server.cpp
readv_writev/: Makefile  main.cpp  readv-writev
stack_list/reverse_stack/: Makefile  main.cpp
